Move away of deprecated Integer/Boolean constructor.
Change-Id: Iab91e05314206725d8175d30bfb2866c0d99a8d7
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>